--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "less": "~2.2.0",
-    "uglify-js": "~2.4.16",
-    "clean-css": "~3.0.3"
+    "bower": "1.8.0",
+    "less": "2.7.1",
+    "uglify-js": "2.7.5",
+    "clean-css": "3.4.23"
   }
 }
