--- a/package.json
+++ b/package.json
@@ -3,8 +3,17 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "bower": "1.8.0",
     "less": "2.7.2",
-    "uglify-js": "2.8.22"
+    "uglify-js": "2.8.22",
+    "@bower_components/bigfoot": "pxldot/bigfoot#2.1.4",
+    "@bower_components/bootstrap": "twbs/bootstrap#3.3.7",
+    "@bower_components/jquery": "jquery/jquery-dist#>= 1.8.0"
+  },
+  "engines": {
+    "yarn": ">= 1.0.0"
+  },
+  "scripts": {
+    "comment": "This symlinks to the old location, really should repoint sources to the node_modules directory instead.",
+    "postinstall": "node -e \"try { require('fs').symlinkSync(require('path').resolve('node_modules/@bower_components'), 'theme/static/vendor', 'junction') } catch (e) { }\""
   }
 }
