--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,11 +1,23 @@
+aliases:
+  - &restore-cache
+    keys:
+      - dependencies-{{ .Branch }}-{{ checksum "package.json" }}-{{ checksum "requirements.txt" }}-{{ checksum "yarn.lock.txt" }}
+
+  - &save-cache
+    paths:
+      - venv
+      - node_modules
+    key: dependencies-{{ .Branch }}-{{ checksum "package.json" }}-{{ checksum "requirements.txt" }}-{{ checksum "yarn.lock.txt" }}
+
 version: 2
 jobs:
-  install:
+  build:
     docker:
       # - image: circleci/python:2.7-node-browsers-legacy
       - image: circleci/python:2-node
     steps:
       - checkout
+      - restore_cache: *restore-cache
       - run:
           name: Install dependencies
           command: |
@@ -18,17 +30,25 @@ jobs:
           command: |
             . venv/bin/activate
             make publish
+      - save_cache: *save-cache
   deploy:
     docker:
       - image: circleci/python:2.7-node
     steps:
       - checkout
-      - run: echo 'hello'
+      - restore_cache: *restore-cache
+      - run:
+          name: Copy files to S3
+          command: python ./deploy_to_s3.py
+
 workflows:
   version: 2
-  build_and_test:
+  build-deploy:
     jobs:
-      - install
+      - build
       - deploy:
           requires:
-            - install
+            - build
+        #   filters:
+        #     branches:
+        #       only: master
