--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,6 @@ typogrify==2.0.7
 # webassets==0.12.1
 -e git://github.com/miracle2k/webassets.git@34420b231529254fdf2e611a51e2175cd3d89df6#egg=webassets
 rcssmin==1.0.6
+
+# Deploy
+boto3==1.9.50
