--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -50,6 +50,11 @@ jobs:
       - checkout
       - restore_cache: *restore-python-cache
       - restore_cache: *restore-node-cache
+      - run: git submodule update --init --recursive
+      - run:
+          command: |
+            . venv/bin/activate
+            make publish
       - run:
           name: Copy files to S3
           command: |
