--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -51,6 +51,7 @@ jobs:
       - restore_cache: *restore-python-cache
       - restore_cache: *restore-node-cache
       - run: git submodule update --init --recursive
+      - run: yarn install --frozen-lockfile
       - run:
           command: |
             . venv/bin/activate
