--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "uglify-js": "2.8.22",
     "@bower_components/bigfoot": "pxldot/bigfoot#2.1.4",
     "@bower_components/bootstrap": "twbs/bootstrap#3.3.7",
-    "@bower_components/jquery": "jquery/jquery-dist#>= 1.8.0"
+    "@bower_components/jquery": "jquery/jquery-dist#3.3.1"
   },
   "engines": {
     "yarn": ">= 1.0.0"
