--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,12 +37,36 @@ jobs:
       - run: yarn install --frozen-lockfile
       - run: git submodule update --init --recursive
       - run:
+          name: Build site
           command: |
             . venv/bin/activate
             make publish
       - save_cache: *save-python-cache
       - save_cache: *save-node-cache
-  deploy:
+  deploy-stage:
+    docker:
+      - image: circleci/python:2.7-node
+    working_directory: ~/app
+    steps:
+      - checkout
+      - restore_cache: *restore-python-cache
+      - restore_cache: *restore-node-cache
+      - run: git submodule update --init --recursive
+      - run: yarn install --frozen-lockfile
+      - run:
+          name: Build site
+          command: |
+            . venv/bin/activate
+            make publish-stage
+      - run:
+          name: Copy files to S3
+          command: |
+            . venv/bin/activate
+            python deploy_to_s3.py stage
+      - run:
+          name: Purge Cloudflare
+          command: ./deploy_purge_cf_zone.sh
+  deploy-prod:
     docker:
       - image: circleci/python:2.7-node
     working_directory: ~/app
@@ -55,21 +79,27 @@ jobs:
       - run:
           command: |
             . venv/bin/activate
-            make publish-stage
+            make publish-prod
       - run:
           name: Copy files to S3
           command: |
             . venv/bin/activate
-            python deploy_to_s3.py stage
+            python deploy_to_s3.py prod
+      - run:
+          name: Purge Cloudflare
+          command: ./deploy_purge_cf_zone.sh
 
 workflows:
   version: 2
   build-deploy:
     jobs:
       - build
-      - deploy:
+      - deploy-stage:
           requires:
             - build
-        #   filters:
-        #     branches:
-        #       only: master
+      - deploy-prod:
+          requires:
+            - build
+          filters:
+            branches:
+              only: master
